--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css"/>
-    <title>Start Project</title>
+    <title>Movie App</title>
   </head>
   <body>
+
+    <header>
+      <form  id="form">
+        <input type="text" id="search" class="search" placeholder="Search">        
+      </form>
+    </header>
+
+    <main id="main">
+
+      <!-- <div class="movie">
+        <img src="https://storage.myseldon.com/news_pict_76/765128319167AB63C84855D26CBBCA67" alt="">
+        <div class="movie-info">
+          <h3>Movie Title</h3>
+          <span class="green">9.8</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatibus ad, iusto est ullam quam harum debitis quos saepe quo exercitationem nobis, laborum veritatis cum delectus! Labore architecto atque adipisci?
+        </div>
+      </div> -->
+
+    </main>
+
 	<script src="script.js"></script>
   </body>
 </html>
